# utilities

./: README.md  licence  pyproject.toml
logging/: log_config.yaml
src/utilities/: email.py  sharepoint.py  snowflake  string_tools.py
src/utilities.egg-info/: PKG-INFO  SOURCES.txt
